styles.css
@import url('https://fonts.googleapis.com/css2?family=Fraunces&display=swap');


/* document */

html, body{
    font-family: 'Fraunces', serif;
    font-size: medium;
    margin: 0 auto;
    height: auto;
    width: 100%;
}

a :hover{
    color: hsl(24, 68%, 52%);
}

a {
    text-decoration: none;
}

h1 {
    font-size: 2vw;
    text-align: center;
    font-style: italic;
}

H2 {
    font-size: 3vw;
    text-align: center;
}


/* header */

header {
    display: block;
    width: 100%;
    height: 100px;
    background-image: linear-gradient(90deg,rgb(49, 56, 158), rgb(30, 39, 36));
}

.upeer-head {
    display: flex;

}

.upper-head-left{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    width: 50%;
    height: 100px;
    padding-left: 50px;
}

.head-logo {
    height: 90px;
}

.head-logo-picture{
    height: 100%;
    object-fit: cover;
}

.head-name{
    padding-left: 20px;
    padding-right: 20px;
    font-size: 3vw;
    color: #ffffff;
}

.head-name span{
    font-style: italic;
}

.upper-head-right{
    display: flex;
    justify-content: flex-end;
    align-items: center;
    width: 50%;
    height: 100px;
    padding-right: 50px;
}


/* filter */

form {
    float: left;
    position: sticky;
    display: grid;
    top: 0;
    margin: 0 auto;
    grid-template-columns: repeat(5, 1 fr);
    grid-gap: 20px;
    height: 100%;
    width: 20%;
    padding-left: 2%;
 }

 form h1 {
    grid-column: auto / span 5;
    color: rgb(15, 15, 15);
    font-style: italic;
  }

form input{
    grid-column: auto / span 1;
    text-align: right;
    width: 2vw;
    height: 2vw;
}

form label{
    grid-column: auto / span 4;
    text-align: left;
    font-size: 1.5vw;
}


/* main */

main {
    display: block;
    height: 100%;
    width: 100%;
}

.cars-container {
    display: flex;
    flex-basis: 100px;
    flex-wrap: wrap;
    border-width: 3px;
    border-style: solid;
    border-color: #ffffff;
}

.product-cell{
    flex-basis: 100px;
    margin: 10px;
}

.product-picture {
    height: 320px;
    width: 420px;
}

.product-picture img {
    width: 100%;
    width: 100%;
    object-fit: cover;
}

.wrapper {
    width: 100%;
    margin: 0 auto;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 20px;
}

.price {
    grid-column: auto / span 2;
    text-align: center;
}

.view{
    grid-column: auto / span 2;
    text-align: center;
    border: 3px solid #001e50;
    border-radius: 44px;
}

.product-link-view{
    width: 200px;
    font-size: 2rem;
}

.col-feature{
    font-size: 1.2rem;
}

.col-feature-value{
    font-size: 1.2rem;
}

.price{
    font-size: 1.5rem;
}


/* fixed */

.right-bar {
    z-index: 1;
    position: fixed;
    top: 150px;
    right: 40px;
}
.right-bar-list {
    display: flex;
    flex-direction: column;
    width: 48px;
    margin-left: 24px;
    transition-property: width;
    transition-duration: 0.5s;
}
.right-bar-list-item img  {
    width: 48px;    
    height: 48px;
    position: absolute;
    left: 36px;
}

.right-bar-list-item {
    display: flex;
    flex-direction: row;
    background-color: rgba(25, 88, 182, 0.9);
    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.5);
    width: 480px;    
    height: 48px;
    margin-bottom: 20px;
    border-radius: 24px;
    padding: 6px;
    padding-left: 30px;
    align-items: center;
}

.right-bar-list-item span {
    position: absolute;
    font-size: 1.4em;
    left: 120px;
    width: 200px;
}
.right-bar-list a {
    color: white;
}
.right-bar-list:hover {
    width: 240px;
}


/*gallery*/

.gallery{
    width: 100%;
    padding: 5px;
    padding-bottom:10px;
}

#largeImg {
    border: solid 1px #ccc;
    width: 50%;
    height: 50%;
    padding: 5px;
    margin-left: 15%;
    box-shadow: 10px 10px 10px rgba(24, 22, 22, 0.541)
  }

.gallery-pictures{
    height: 100%;
    width: 100%;
    object-fit: cover;
}

#thumbs{
    display: flex;
    flex-direction: column;
    float: left;
    top: 0;
    margin: 0 auto;
    height: 100%;
    width: 7%;
}

  #thumbs li {
    list-style: none;
    border: solid 1px #ccc;
    width: 90%;
    height: 100%;
    padding: 3px;
    margin: 2px;
}

  #thumbs li:hover {
    border: solid 3px  #FF9900;

}

#thumbs {
    margin: 0;
    padding-left: 15px;
}


/* footer */

footer {
    display: flex;
    width: 100%;
    height: 240px;
    border-top: 1px solid lightgray;
    align-items: flex-start;
    justify-content: center;
}

.footer-menu {
    display: inherit;
    margin: 0 auto;
}

.footer-category {
    display: inherit;
    flex-direction: column;
    width: 300px;
    padding: 0;
    list-style-type: none;
}

.footer-category-title {
    font-size: 1.5vw;
}

.footer-category-item {
    line-height: 1.8em;
    font-size: 1vw;
}

.footer-category-item-link {
    color: rgb(50, 100, 150);
}



/* media queries */

@media (max-width: 1280px) {
    
    body {
        width: 100%;
        display: flex;
        flex-direction: column;
    }

    h1 {
        font-size: 3vw;
    }
    
    H2 {
        font-size: 4vw;
    }

    .head-logo{
        display: none;
    }

    form {
        position: static;
        display: grid;

        margin: 0 auto;
    
        grid-template-columns: repeat(5, 1 fr);
        grid-gap: 20px;
        height: 100%;
        width: 100%;
    }

    form label{
        font-size: 1.5rem;
    }

    .footer-menu {
        flex-direction: column;
        flex: wrap;
        justify-content: space-around;
    }
    .footer-category-title {
        font-size: 2.5vw;
    }

    .footer-category-item {
        line-height: 1.2em;
        font-size: 2vw;
    }
}

